@@ -2,6 +2,8 @@ Back In Time
 
 Version 0.9.8
 * KDE4: sort files by name, size or date
+* cron 5/10 minutes: replace mutiple lines with a single crontab line using divide (*/5 or */10)
+* cron: when called from cron redirect output (stdout & stderr) to /dev/null
 
 Version 0.9.6
 * update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
